[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/sprites/02/Baren_16x16.png" type="Texture" id=1]
[ext_resource path="res://assets/images/sprites/02/Ice_16x16.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/ui/themes/H4_Theme.tres" type="Theme" id=3]
[ext_resource path="res://src/scenes/ui/themes/H3_Theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/sprites/02/Lava_16x16.png" type="Texture" id=5]
[ext_resource path="res://assets/images/sprites/02/Terran_16x16.png" type="Texture" id=6]
[ext_resource path="res://src/scenes/ui/themes/BodyTheme.tres" type="Theme" id=7]
[ext_resource path="res://src/scenes/ui/popups/scripts/PowerSelectionPopup.gd" type="Script" id=8]
[ext_resource path="res://src/scenes/ui/themes/H2_Theme.tres" type="Theme" id=9]

[node name="PowerSelectionPopup" type="PopupDialog"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
rect_scale = Vector2( 0.5, 0.5 )
popup_exclusive = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 16.0
margin_right = 256.0
margin_bottom = 32.0
theme = ExtResource( 9 )
text = "Power Selection"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 48.0
theme = ExtResource( 4 )
text = "Select up to 2 powers"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowersHBox" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 40.0
margin_right = 264.0
margin_bottom = 128.0
theme = ExtResource( 3 )
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PuckDashVBox" type="VBoxContainer" parent="PowersHBox"]
margin_left = 1.0
margin_right = 42.0
margin_bottom = 88.0
alignment = 1

[node name="PowerTitle" type="Label" parent="PowersHBox/PuckDashVBox"]
margin_top = 4.0
margin_right = 41.0
margin_bottom = 18.0
text = "Puck"
align = 1
valign = 1

[node name="PowerTexture" type="TextureRect" parent="PowersHBox/PuckDashVBox"]
margin_top = 22.0
margin_right = 41.0
margin_bottom = 38.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="PowerDesc" type="Label" parent="PowersHBox/PuckDashVBox"]
margin_top = 42.0
margin_right = 41.0
margin_bottom = 56.0
text = "Dash"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="PowersHBox/PuckDashVBox"]
margin_top = 60.0
margin_right = 41.0
margin_bottom = 84.0
text = "On"

[node name="IOPhaseVBox" type="VBoxContainer" parent="PowersHBox"]
margin_left = 58.0
margin_right = 106.0
margin_bottom = 88.0
alignment = 1

[node name="PowerTitle" type="Label" parent="PowersHBox/IOPhaseVBox"]
margin_top = 4.0
margin_right = 48.0
margin_bottom = 18.0
text = "Io"
align = 1
valign = 1
autowrap = true

[node name="PowerTexture" type="TextureRect" parent="PowersHBox/IOPhaseVBox"]
modulate = Color( 0.93, 15.7, 100, 1 )
margin_top = 22.0
margin_right = 48.0
margin_bottom = 38.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="PowerDesc" type="Label" parent="PowersHBox/IOPhaseVBox"]
margin_top = 42.0
margin_right = 48.0
margin_bottom = 56.0
text = "Phasing"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="PowersHBox/IOPhaseVBox"]
margin_top = 60.0
margin_right = 48.0
margin_bottom = 84.0
text = "On"

[node name="PhobosStrengthVBox" type="VBoxContainer" parent="PowersHBox"]
margin_left = 122.0
margin_right = 177.0
margin_bottom = 88.0
alignment = 1

[node name="PowerTitle" type="Label" parent="PowersHBox/PhobosStrengthVBox"]
margin_top = 4.0
margin_right = 55.0
margin_bottom = 18.0
text = "Phobos"
align = 1
valign = 1

[node name="PowerTexture" type="TextureRect" parent="PowersHBox/PhobosStrengthVBox"]
margin_top = 22.0
margin_right = 55.0
margin_bottom = 38.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="PowerDesc" type="Label" parent="PowersHBox/PhobosStrengthVBox"]
margin_top = 42.0
margin_right = 55.0
margin_bottom = 56.0
text = "Strength"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="PowersHBox/PhobosStrengthVBox"]
margin_top = 60.0
margin_right = 55.0
margin_bottom = 84.0
text = "On"

[node name="TitanPlatformVBox" type="VBoxContainer" parent="PowersHBox"]
margin_left = 193.0
margin_right = 255.0
margin_bottom = 88.0
alignment = 1

[node name="PowerTitle" type="Label" parent="PowersHBox/TitanPlatformVBox"]
margin_top = 4.0
margin_right = 62.0
margin_bottom = 18.0
text = "Titan"
align = 1
valign = 1

[node name="PowerTexture" type="TextureRect" parent="PowersHBox/TitanPlatformVBox"]
margin_top = 22.0
margin_right = 62.0
margin_bottom = 38.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="PowerDesc" type="Label" parent="PowersHBox/TitanPlatformVBox"]
margin_top = 42.0
margin_right = 62.0
margin_bottom = 56.0
text = "Platforms"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="PowersHBox/TitanPlatformVBox"]
margin_top = 60.0
margin_right = 62.0
margin_bottom = 84.0
text = "On"

[node name="BtnHBox" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 144.0
theme = ExtResource( 7 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptBtn" type="Button" parent="BtnHBox"]
margin_left = 76.0
margin_right = 117.0
margin_bottom = 16.0
text = "Accept"

[node name="CancelBtn" type="Button" parent="BtnHBox"]
margin_left = 121.0
margin_right = 163.0
margin_bottom = 16.0
text = "Cancel"
[connection signal="about_to_show" from="." to="." method="_on_PowerSelectionPopup_about_to_show"]
[connection signal="button_up" from="BtnHBox/AcceptBtn" to="." method="_on_AcceptBtn_button_up"]
[connection signal="button_up" from="BtnHBox/CancelBtn" to="." method="_on_CancelBtn_button_up"]
